Add admin developer SQL console
